# AG-Math

./: CMakeLists.txt  Mat3D.h  README.md  Vect2D.h  Vect3D.h
.github/workflows/: cmake-multi-platform.yml
tests/: main.cpp
